--- a/index.html
+++ b/index.html
@@ -4,29 +4,66 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+
+  <!--- google fonts --->
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <!--- scripts fonts --->
+<script src="https://kit.fontawesome.com/4ff11cc758.js" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
   <section id="title">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="">Tindog</a>
 
-    <!-- Nav Bar -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse navbar-fixed-top" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="linkedin.com">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="linkedin.com">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="linkedin.com">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- Title -->
+
+      <div class="row">
+
+        <div class="col-lg-6 col-md-4 col-sm-6">
+          <h1 class="title-opening">Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn btn-primary btn-lg btn btn-outline-primary"><i class="fab fa-apple"></i>Download</button>
+          <button type="button" class="btn btn-dark btn btn-danger btn-lg btn btn-outline-danger"><i class="fab fa-google-play"></i>
+
+Download</button>
+        </div>
 
 
+        <div class="col-lg-6 col-md-4 col-sm-6">
+          <img src="images/iphone6.png" alt="iphone-mockup">
+        </div>
+      </div>
 
-
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
     </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
-
   </section>
 
 
